# skeleton-python3

./: .coveragerc  .env.dist  .gitmessage  .version  LICENSE  Makefile  README.md  init.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
PROJECT_NAME/: __init__.py  __main__.py  _version.py  app.py
PROJECT_NAME/cli/: entrypoint.py
PROJECT_NAME/cmd/: run.py
docs/: conf.py
tests/: fixtures.py
